# cadence-hooks

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  beta-release.yml  ci.yml  release.yml
crates/cadence/: Cargo.toml
crates/cadence/src/: block_orphaned_todos.rs  git_safety.rs  lib.rs  markdown_lint.rs  memory_guard.rs  prevent_secret_leaks.rs  prevent_secret_writes.rs  secret_patterns.rs  terminology.rs  validate_env_vars.rs  validate_line_endings.rs  warn_docs_update.rs  warn_untracked.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  loop_analysis.rs  shell.rs  test_builders.rs
crates/guardrails/: Cargo.toml
crates/guardrails/src/: check_idle_return.rs  dismiss_main_branch_warn.rs  guard_gh_dangerous.rs  guard_gh_write.rs  guard_git_init.rs  guard_push_remote.rs  lib.rs  nudge_upgrade_after_push.rs  warn_branch_base.rs  warn_cron_datetime.rs  warn_main_branch.rs  warn_untracked.rs
crates/obsidian/: Cargo.toml
crates/obsidian/src/: lib.rs  trash_guard.rs
crates/rules/: Cargo.toml
crates/rules/src/: check_security_patterns.rs  lib.rs  validate_skill_frontmatter.rs
docs/: test-audit-report.md
docs/adr/: 0001-route-nudge-output-through-stdout-json.md
scripts/: bump-version.sh
src/: configure.rs  main.rs
tests/: configure.rs  hook_registration_audit.rs  selective_disable.rs  version_mismatch.rs
