[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
authors = ["Cameron Sjo"]
repository = "https://github.com/cameronsjo/claude-hooks"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }

claude-hooks-core = { path = "crates/core" }
claude-hooks-cadence = { path = "crates/cadence" }
claude-hooks-guardrails = { path = "crates/guardrails" }
claude-hooks-rules = { path = "crates/rules" }
claude-hooks-obsidian = { path = "crates/obsidian" }

[package]
name = "claude-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compiled Claude Code hooks for cadence, git-guardrails, rules, and obsidian plugins"

[[bin]]
name = "claude-hooks"
path = "src/main.rs"

[dependencies]
clap.workspace = true
claude-hooks-core.workspace = true
claude-hooks-cadence.workspace = true
claude-hooks-guardrails.workspace = true
claude-hooks-rules.workspace = true
claude-hooks-obsidian.workspace = true
