[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "BSL-1.1"
authors = ["Cameron Sjo"]
repository = "https://github.com/cameronsjo/cadence-hooks"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
brush-parser = "0.3"

cadence-hooks-core = { path = "crates/core" }
cadence-hooks-cadence = { path = "crates/cadence" }
cadence-hooks-guardrails = { path = "crates/guardrails" }
cadence-hooks-rules = { path = "crates/rules" }
cadence-hooks-obsidian = { path = "crates/obsidian" }

[package]
name = "cadence-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compiled Claude Code hooks for cadence, git-guardrails, rules, and obsidian plugins"

[[bin]]
name = "cadence-hooks"
path = "src/main.rs"

[dev-dependencies]
serde_json.workspace = true

[dependencies]
clap.workspace = true
cadence-hooks-core.workspace = true
cadence-hooks-cadence.workspace = true
cadence-hooks-guardrails.workspace = true
cadence-hooks-rules.workspace = true
cadence-hooks-obsidian.workspace = true
