[package]
name = "cadence-hooks-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol for Claude Code hook binaries"

[features]
test-builders = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
brush-parser.workspace = true
