[package]
name = "cadence-hooks-guardrails"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git guardrails hooks: push protection, gh write guards, idle detection"

[dependencies]
cadence-hooks-core.workspace = true
regex.workspace = true

[dev-dependencies]
cadence-hooks-core = { workspace = true, features = ["test-builders"] }
