[package]
name = "cadence-hooks-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rules plugin hooks: skill frontmatter validation, security pattern scanning"

[dependencies]
cadence-hooks-core.workspace = true
regex.workspace = true

[dev-dependencies]
cadence-hooks-core = { workspace = true, features = ["test-builders"] }
